--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                             </label>
                             <select id="productFabric" required>
                                 <option value="">اختر نوع القماش</option>
-                                <option value="F">F - قماش عادي (Fabric)</option>
+                                <option value="F">F - قماش (Fabric)</option>
                                 <option value="C">C - قطن (Cotton)</option>
-                                <option value="S">S - حرير (Silk)</option>
+                                <option value="S">S - معدني (Steel)</option>
                                 <option value="P">P - بوليستر (Polyester)</option>
                                 <option value="M">M - مخلوط (Mixed)</option>
                             </select>
@@ -363,9 +363,9 @@
                     <label>نوع القماش</label>
                     <select id="filterFabric">
                         <option value="">الكل</option>
-                        <option value="F">قماش عادي</option>
+                        <option value="F">قماش</option>
                         <option value="C">قطن</option>
-                        <option value="S">حرير</option>
+                        <option value="S">معدني</option>
                         <option value="P">بوليستر</option>
                         <option value="M">مخلوط</option>
                     </select>
